--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.1.0",
+    "@expo/vector-icons": "^12.0.5",
     "expo": "~41.0.1",
+    "expo-app-loading": "^1.0.3",
+    "expo-google-fonts": "^0.0.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12"
   },
