--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/core": "^5.15.3",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "add": "^2.0.6",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-google-fonts": "^0.0.0",
@@ -20,12 +21,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-dots-pagination": "^0.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
